# duckdb-curl-filesystem

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  extension_config.cmake
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: MainDistributionPipeline.yml
.skills/duckdb-extension-upgrade/: SKILL.md
benchmark/: multicurl_benchmark.cpp
docs/: NEXT_README.md  README.md
integration/: http_filesystem_test.cpp  multi_curl_manager_test.cpp
scripts/: bootstrap-template.py
src/: create_secret_functions.cpp  crypto.cpp  curl_httpfs_extension.cpp  curl_request.cpp  extension_loader_helper.cpp  hffs.cpp  httpfs.cpp  httpfs_curl_client.cpp  httpfs_extension.cpp  httpfs_httplib_client.cpp  httpfs_multi_curl_client.cpp  multi_curl_client.cpp  multi_curl_engine.cpp  multi_curl_manager.cpp  multi_curl_util.cpp  multicurl_engine.cpp  s3fs.cpp  string_utils.cpp  tcp_connection_fetcher.cpp  tcp_connection_query_function.cpp  tcp_ip_recorder.cpp  thread_pool.cpp  thread_utils.cpp
src/include/: crypto.hpp  curl_httpfs_extension.hpp  curl_request.cpp  curl_request.hpp  extension_config.hpp  extension_loader_helper.hpp  httpfs_client.hpp  multi_curl_client.hpp  multi_curl_engine.hpp  multi_curl_manager.hpp  multi_curl_util.hpp  multicurl_engine.hpp  string_utils.hpp  tcp_connection_fetcher.hpp  tcp_connection_query_function.hpp  tcp_ip_recorder.hpp  thread_pool.hpp  thread_utils.hpp
test/: README.md
test/sql/: attach_db.test  basic_http.test  default_http_util.test  http_util_switch.test  multi_curl_error_handling.test
test/unittest/: CMakeLists.txt  main.cpp  test_multi_curl_error.cpp
